Relinked the icon for the exe

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ obj/x64/Debug/DesktopHide.pdb
 obj/x64/Debug/DesktopHide.Properties.Resources.resources
 obj/x64/Debug/DesktopHide.Splash.resources
 .vs/DesktopHide/v16/.suo
+obj/x64/Debug/DesignTimeResolveAssemblyReferences.cache
+obj/x64/Debug/DesignTimeResolveAssemblyReferencesInput.cache
